--- a/task1/ml-course-1.ipynb
+++ b/task1/ml-course-1.ipynb
@@ -670,9 +670,24 @@
    "id": "80449e6d",
    "metadata": {},
    "source": [
-    "# TODO:\n",
+    "## Practice quiz: Regression\n",
     "\n",
-    "Practice quiz: Regression•10 minutes\n",
+    "| # | Question                                                                             | Options                                                                                                                                                       | Your Answer | Correct Answer |\n",
+    "| - | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- | -------------- |\n",
+    "| 1 | What is the main goal of regression?                                                 | A) Classify data points<br>B) Reduce dimensionality<br>**C) Predict a continuous output**<br>D) Cluster data into groups                                      | C           | ✅ C            |\n",
+    "| 2 | Which of the following is an example of a regression problem?                        | A) Predicting whether an email is spam<br>**B) Predicting the price of a house**<br>C) Classifying animals<br>D) Identifying spoken words                     | B           | ✅ B            |\n",
+    "| 3 | In linear regression, what does the slope represent?                                 | A) The intercept on the Y-axis<br>B) The cost function<br>**C) The rate of change of Y with respect to X**<br>D) The error                                    | C           | ✅ C            |\n",
+    "| 4 | What is the name of the function that measures the error in regression?              | A) Gradient<br>B) Slope<br>**C) Cost function (like MSE)**<br>D) Learning rate                                                                                | C           | ✅ C            |\n",
+    "| 5 | Which algorithm is commonly used to minimize the cost function in linear regression? | A) Support Vector Machine<br>B) K-Means<br>C) Decision Trees<br>**D) Gradient Descent**                                                                       | D           | ✅ D            |\n",
+    "| 6 | What happens if the learning rate is too high during gradient descent?               | A) The model will converge slowly<br>**B) The model might overshoot and never converge**<br>C) The model will always converge perfectly<br>D) Nothing happens | B           | ✅ B            |\n",
+    "| 7 | Which of the following is NOT a regression algorithm?                                | A) Linear Regression<br>B) Lasso Regression<br>C) Ridge Regression<br>**D) K-Means Clustering**                                                               | D           | ✅ D            |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc86638a",
+   "metadata": {},
+   "source": [
     "Practice quiz: Train the model with gradient descent"
    ]
   },
